# mc_gentext

./: CMakeLists.txt
src/: markov.cpp  markov.h
tests/: markov_chain_tests.cpp
